//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id String [pk]
  cpf String [unique, not null]
  nome String [not null]
  email String [unique]
  password_digest String [not null]
  homem_hora Float [default: 0]
  is_new Boolean [not null, default: true]
  contrato String [not null, default: 'Nenhum']
  tentativas_de_login Int [not null, default: 0]
  last_login DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  user_role String [not null]
  AuthenticationAudit authentication_audit [not null]
  OS OS [not null]
  obrasGerenciadas obras [not null]
  obrasSupervisionadas dia_obras [not null]
  obrasParticipadas ProfissionalNaObra [not null]
  plantoes plantao_operador [not null]
  atividadesParticipadas ProfissionalNaAtividade [not null]
  revisao revisoes [not null]
}

Table clientes {
  id String [pk]
  nome String [not null]
  responsavel String [not null, default: '']
  telefone String [not null, default: '']
  email String [unique, not null]
  password_digest String [not null, default: '']
  endereco String [not null, default: '']
  cnpj String [unique, not null]
  is_new Boolean [not null, default: true]
  user_role String [not null, default: 'Cliente']
  tentativas_de_login Int [not null, default: 0]
  services String[] [not null]
  last_login DateTime
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  equipamento Equipamento [not null]
  tipo_ocorrencias Ocurrence_type [not null]
  obra obras [not null]
  AuthenticationAudit authentication_audit_customer [not null]
  revisao revisoes [not null]
}

Table authentication_audit {
  id Int [pk, increment]
  ip_address String
  remote_port String
  browser String
  status AUTHENTICATION_STATUS [not null]
  user_id String
  tecnico users
  created_at DateTime [default: `now()`, not null]
}

Table authentication_audit_customer {
  id Int [pk, increment]
  ip_address String
  remote_port String
  browser String
  status AUTHENTICATION_STATUS [not null]
  cliente_id String
  cliente clientes
  created_at DateTime [default: `now()`, not null]
}

Table OS {
  id Int [pk, increment]
  tipo_manutencao String [not null]
  titulo String [not null]
  sistema String [not null]
  tecnico_id String [not null]
  data DateTime [not null]
  inicio DateTime [not null]
  termino DateTime [not null]
  descricao_tarefa String [not null]
  anexos String [not null]
  equipamento Equipamento [not null]
  tecnico users [not null]
}

Table plantoes {
  id Int [pk, increment]
  data_inicio DateTime [default: `now()`, not null]
  data_fim DateTime [not null]
  horario_rf DateTime [not null]
  contrato String [not null]
  ocorrencia ocorrencias [not null]
  revisao revisoes [not null]
  informacoes_adicionais Json
  consideracoes String [not null, default: '']
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  operadoresNomes String[] [not null]
  operadores plantao_operador [not null]
}

Table plantao_operador {
  plantao plantoes [not null]
  plantaoId Int [not null]
  operador users [not null]
  operadorId String [not null]

  indexes {
    (plantaoId, operadorId) [pk]
  }
}

Table ocorrencias {
  id Int [pk, increment]
  plantao_id Int [not null]
  plantao plantoes [not null]
  ocurrence_type String [not null, default: 'Padrao']
  descricao String
  horario DateTime
  termino DateTime
  data DateTime [default: `now()`, not null]
  local String
  observacao String
  acao String
  responsavel String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table revisoes {
  id Int [pk, increment]
  plantao_id Int [not null]
  plantao plantoes [not null]
  cliente_id String
  cliente clientes
  user_id String
  user users
  nomeSolicitante String [not null]
  solicitacao String [not null]
  isSolved Boolean [not null, default: false]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
}

Table obras {
  id Int [pk, increment]
  cliente_id String [not null]
  cliente clientes [not null]
  gerente_id String [not null]
  gerente users [not null]
  nome String [not null]
  inicio DateTime [not null]
  termino DateTime
  numproposta String [not null, default: '']
  disciplinas String[] [not null]
  horas_previstas Float [not null]
  hh_previstas Float [not null, default: 0]
  tipoDias String [not null, default: 'util']
  equipe String[] [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [not null]
  dia_obra dia_obras [not null]
  atividades atividades [not null]
}

Table dia_obras {
  id Int [increment, unique, not null]
  obra_id Int [not null]
  obra obras [not null]
  data DateTime [not null]
  inicio DateTime [not null]
  termino DateTime
  horas_gastas Float [not null]
  supervisor_id String [not null]
  observacao String
  tipo_dia String [default: 'util']
  equipe String[] [not null]
  supervisor users [not null]
  profissionais ProfissionalNaObra [not null]
  atividadeNaObra AtividadeNoDiaObra [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
}

Table atividades {
  id Int [increment, unique, not null]
  obra_id Int [not null]
  obra obras [not null]
  nome String [not null]
  inicio DateTime
  termino DateTime
  horas_previstas Float
  horas_gastas Float
  interferencia String
  materiais String[] [not null]
  checklist String[] [not null]
  descricao String [not null]
  profissionais ProfissionalNaAtividade [not null]
  atividadeNaObra AtividadeNoDiaObra [not null]
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]
}

Table AtividadeNoDiaObra {
  dia_obra_id Int [not null]
  dia_obra dia_obras [not null]
  atividade_id Int [not null]
  atividade atividades [not null]
  concluidos String[] [not null]
  interferencias String
  equipe String[] [not null]
  imagens Bytes[] [not null]
  observacao String
  qtde_concluidos Int [default: 0]
  horas_gastas Float [default: 0]
  checklist_porcentagem String
  created_at DateTime [default: `now()`, not null]
  updated_at DateTime [default: `now()`, not null]

  indexes {
    (dia_obra_id, atividade_id) [pk]
  }
}

Table ProfissionalNaObra {
  profissional_id String [not null]
  profissional users [not null]
  dia_obra_id Int [not null]
  dia_obra dia_obras [not null]

  indexes {
    (profissional_id, dia_obra_id) [pk]
  }
}

Table ProfissionalNaAtividade {
  profissional_id String [not null]
  profissional users [not null]
  atividade_id Int [not null]
  atividade atividades [not null]

  indexes {
    (profissional_id, atividade_id) [pk]
  }
}

Table Ocurrence_type {
  id Int [pk, increment]
  type String [not null]
  subtypes String[] [not null]
  contract_id String [not null]
  contract clientes [not null]
}

Table marcas {
  id Int [pk, increment]
  marca String [unique, not null]
  telefone String [not null]
  email String [not null]
  site String [not null]
  equipamento Equipamento [not null]
}

Table Equipamento {
  id Int [pk, increment]
  id_os Int [unique, not null]
  nome String [not null]
  modelo String [not null]
  marca_nome String [not null]
  cliente_id String [not null]
  ip String [not null]
  mac String [not null]
  NS String [not null]
  marca marcas [not null]
  cliente clientes [not null]
  os OS [not null]
}

Enum UserType {
  TECNICO
  CLIENTE
}

Enum AUTHENTICATION_STATUS {
  SUCCESS
  USER_NOT_EXISTS
  INCORRECT_PASSWORD
  BLOCKED
}

Ref: authentication_audit.user_id > users.id [delete: Cascade]

Ref: authentication_audit_customer.cliente_id > clientes.id [delete: Cascade]

Ref: OS.tecnico_id > users.id [delete: Cascade]

Ref: plantao_operador.plantaoId > plantoes.id [delete: Cascade]

Ref: plantao_operador.operadorId > users.id [delete: Cascade]

Ref: ocorrencias.plantao_id > plantoes.id [delete: Cascade]

Ref: revisoes.plantao_id > plantoes.id

Ref: revisoes.cliente_id > clientes.id

Ref: revisoes.user_id > users.id

Ref: obras.cliente_id > clientes.id [delete: Cascade]

Ref: obras.gerente_id > users.id [delete: Cascade]

Ref: dia_obras.obra_id > obras.id [delete: Cascade]

Ref: dia_obras.supervisor_id > users.id [delete: Cascade]

Ref: atividades.obra_id > obras.id [delete: Cascade]

Ref: AtividadeNoDiaObra.dia_obra_id > dia_obras.id [delete: Cascade]

Ref: AtividadeNoDiaObra.atividade_id > atividades.id [delete: Cascade]

Ref: ProfissionalNaObra.profissional_id > users.id

Ref: ProfissionalNaObra.dia_obra_id > dia_obras.id

Ref: ProfissionalNaAtividade.profissional_id > users.id

Ref: ProfissionalNaAtividade.atividade_id > atividades.id

Ref: Ocurrence_type.contract_id > clientes.id

Ref: Equipamento.marca_nome > marcas.marca

Ref: Equipamento.cliente_id > clientes.id

Ref: Equipamento.id_os > OS.id